(lang dune 3.20)

(name advent-of-code-2025)

(generate_opam_files false)

(source
 (github ofsouzap/advent-of-code-2025))

(authors "Ofsouzap <ofsouzap@gmail.com>")

(license MIT)

(package
 (name advent-of-code-2025)
 (synopsis "Advent of Code 2025 solutions")
 (allow_empty)
 (depends ocaml core))
